[package]
name = "livesplit-extension"
version = "0.1.0"
edition = "2021"
rust-version = "1.59"
description = "Helper library for livesplit-core's extension API."
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "no-std", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
alloc = []
std = ["alloc"]
