[package]
name = "livesplit-extension"
version = "0.1.2"
edition = "2021"
rust-version = "1.61"
description = "Helper library for livesplit-core's extension API."
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "no-std", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "=0.7.2", default-features = false }
ascii = { version = "1.0.0", default-features = false }

[features]
alloc = []
std = ["alloc"]
